--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.10"
+    ext.lifecycle_version = '1.1.1'
+    ext.retrofit_version = '2.4.0'
+    ext.dagger2_version = '2.29.1'
+    ext.android_support_version = '28.0.0'
+    ext.room_version = '2.2.5'
+    ext.gradle_version = '3.1.0'
+
     repositories {
         google()
         jcenter()
@@ -8,6 +15,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
